# yolo_deployment

./: CMakeLists.txt  LICENSE  README.md
examples/trt/: multi_thread.cpp  taskflow.cpp
include/: model_base.h  task_base.h  workspace_base.h  yolo.h  yolo_defines.h  yolo_scheduler.h
include/impl/: yolo_trt.h
src/: task_utils.cpp  yolo_scheduler.cpp
src/trt_impl/: model_trt.cpp  model_trt.h  task_classify_trt.cpp  task_classify_trt.h  task_detect_trt.cpp  task_detect_trt.h  task_segment_trt.cpp  task_segment_trt.h  task_trt.h  taskflow_trt.cpp  taskflow_trt.h  workspace_trt.cpp  workspace_trt.h  yolo_trt_utils.cpp  yolo_trt_utils.h
src/trt_impl/CUDA_operator/: postprocess_classify.cu  postprocess_detect.cu  postprocess_segment.cu  preprocess.cu
test/: include.txt  logging.h  main.cpp  postprocess_classification.cu  postprocess_detection.cu  postprocess_segmentation.cu  preprocess_cpu.cpp  preprocess_t.cu  tracer.txt  trt_engine.cpp  trt_engine.h  yolo_base.cpp  yolo_base.h  yolo_classification_trt.cpp  yolo_classification_trt.h  yolo_detection_trt.cpp  yolo_detection_trt.h  yolo_segmentation_trt.cpp  yolo_segmentation_trt.h  yolo_struct_def.h  yolo_utils.h
